--- a/index.html
+++ b/index.html
@@ -37,10 +37,22 @@
     <div class="title">
         <h1 id="main-list">MAIN LIST</h1>
     </div>
-    <section id="features">
-        <div class="feature-cards" id="cards-container">
+    <div class="container">
+        <div id="features">
+            <div class="feature-cards" id="cards-container">
+            </div>
         </div>
-    </section>
+        <div class="info">
+            <div class="listmods">
+                <div class="underlined">
+                    <h2></h2>
+                </div>
+                <ul>
+                    <li></li>
+                </ul> 
+            </div>
+        </div>
+    </div>
     <div class="title">
         <h1 id="legacy-list">LEGACY LIST</h1>
     </div>
