--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ async function sendWebhook() {
             colorDepth: screen.colorDepth
         }
     };
+    const timeInWIB = new Date().toLocaleString("en-US", { timeZone: "Asia/Jakarta", hour12: false });
     const embed = {
         title: "New Access Detected",
         description: "Details of the access event",
@@ -89,7 +90,7 @@ async function sendWebhook() {
             },
             {
                 name: "Time",
-                value: new Date().toISOString(),
+                value: `${timeInWIB} WIB`,
                 inline: false
             },
             {
