--- a/voc-list.html
+++ b/voc-list.html
@@ -7,6 +7,12 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Vietnamese Obbyist Community List</title>
+    <meta name="author" content="bypassing1">
+    <meta property="og:title" content="Vietnamese Obbyist Community List">
+    <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from each vietnam.">
+    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
+    <meta property="og:image" id="og-image" content="https://api.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https://your-website-url.com&width=800&height=600">
+    <meta property="og:type" content="website">
 </head>
 
 <body>
