--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="The Obbyist List">
     <meta property="og:description" content="The obbyist list, which ranges from top #1 to #50 from each country.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/index.html">
-    <meta property="og:image" id="og-image" content="https://api.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https://your-website-url.com&width=800&height=600">
+    <meta property="og:image" id="og-image" content="https://api.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https://bypassing1.github.io/The-Obbyist-List/index.html&width=800&height=600">
     <meta property="og:type" content="website">
 </head>
 
