--- a/eio-list.html
+++ b/eio-list.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Elite Indonesian Obbyist List">
     <meta property="og:description" content="The Indonesian list, which ranges from top #1 to #50 from each indonesia.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/eio-list.html">
-    <meta property="og:image" id="og-image" content="https://api.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https://bypassing1.github.io/The-Obbyist-List/eio-list.html&width=800&height=600">
+    <meta property="og:image" id="og-image" content="https://shot.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https%3A%2F%2Fbypassing1.github.io%2FThe-Obbyist-List%2Feio-list.html&output=image&file_type=png&wait_for_event=load">">
     <meta property="og:type" content="website">
 </head>
 
