--- a/eio-list.html
+++ b/eio-list.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Elite Indonesian Obbyist List">
     <meta property="og:description" content="The Indonesian list, which ranges from top #1 to #50 from each indonesia.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/eio-list.html">
-    <meta property="og:image" id="og-image" content="assets/bypassing1_github_io_the_obbyist_list_eio_list_htm_bab6f82336d0.png">
+    <meta property="og:image" id="og-image" content="https://github.com/bypassing1/The-Obbyist-List/blob/master/assets/bypassing1_github_io_the_obbyist_list_eio_list_htm_bab6f82336d0.png">
     <meta property="og:type" content="website">
 </head>
 
