--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="The Obbyist List">
     <meta property="og:description" content="The obbyist list, which ranges from top #1 to #50 from each country.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/index.html">
-    <meta property="og:image" id="og-image" content="https://shot.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https%3A%2F%2Fbypassing1.github.io%2FThe-Obbyist-List%2Findex.html&output=image&file_type=png&wait_for_event=load">
+    <meta property="og:image" id="og-image" content="https://github.com/bypassing1/The-Obbyist-List/blob/master/assets/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png">
     <meta property="og:type" content="website">
 </head>
 
