--- a/voc-list.html
+++ b/voc-list.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Vietnamese Obbyist Community List">
     <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from each vietnam.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
-    <meta property="og:image" id="og-image" content="https://shot.screenshotapi.net/screenshot?token=KCGVG07-X8D4RQS-PX8DZ3C-NDNP8FZ&url=https%3A%2F%2Fbypassing1.github.io%2FThe-Obbyist-List%2Fvoc-list.html&output=image&file_type=png&wait_for_event=load">
+    <meta property="og:image" id="og-image" content="https://github.com/bypassing1/The-Obbyist-List/blob/master/assets/bypassing1_github_io_the_obbyist_list_voc_list_htm_4626d2854fa8.png">
     <meta property="og:type" content="website">
 </head>
 
