--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="The Obbyist List">
     <meta property="og:description" content="The obbyist list, which ranges from top #1 to #50 from each country.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/index.html">
-    <meta property="og:image" id="og-image" content="https://github.com/bypassing1/The-Obbyist-List/blob/master/assets/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png">
+    <meta property="og:image" id="og-image" content="https://raw.githubusercontent.com/bypassing1/The-Obbyist-List/master/assets/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png">
     <meta property="og:type" content="website">
 </head>
 
