--- a/voc-list.html
+++ b/voc-list.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Vietnamese Obbyist Community List">
     <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from each vietnam.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
-    <meta property="og:image" id="og-image" content="https://github.com/bypassing1/The-Obbyist-List/blob/master/assets/bypassing1_github_io_the_obbyist_list_voc_list_htm_4626d2854fa8.png">
+    <meta property="og:image" id="og-image" content="https://raw.githubusercontent.com/bypassing1/The-Obbyist-List/master/assets/bypassing1_github_io_the_obbyist_list_voc_list_htm_4626d2854fa8.png">
     <meta property="og:type" content="website">
 </head>
 
