--- a/voc-list.html
+++ b/voc-list.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Vietnamese Obbyist Community List">
     <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from each vietnam.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
-    <meta property="og:image" id="og-image" content="https://raw.githubusercontent.com/bypassing1/The-Obbyist-List/master/assets/bypassing1_github_io_the_obbyist_list_voc_list_htm_4626d2854fa8.png">
+    <meta property="og:image" id="og-image" content="https://cdn.discordapp.com/attachments/1246327728588849162/1250717852030205962/bypassing1_github_io_the_obbyist_list_eio_list_htm_bab6f82336d0.png?ex=666bf545&is=666aa3c5&hm=47bd36f80df72bb3408dbc767684fbf056ab8e0596c00c67237e23c98b0a2734&">
     <meta property="og:type" content="website">
 </head>
 
