--- a/eio-list.html
+++ b/eio-list.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Elite Indonesian Obbyist List">
     <meta property="og:description" content="The Indonesian list, which ranges from top #1 to #50 from each indonesia.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/eio-list.html">
-    <meta property="og:image" id="og-image" content="https://raw.githubusercontent.com/bypassing1/The-Obbyist-List/master/assets/bypassing1_github_io_the_obbyist_list_eio_list_htm_bab6f82336d0.png">
+    <meta property="og:image" id="og-image" content="https://cdn.discordapp.com/attachments/1246327728588849162/1250719085579468830/bypassing1_github_io_the_obbyist_list_eio_list_htm_bab6f82336d0.png?ex=666bf66b&is=666aa4eb&hm=f366e2e0d274f8f4d8fee4a9111e434ac57f8c8dafda408d342c1233b84ec62c&">
     <meta property="og:type" content="website">
 </head>
 
