--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="The Obbyist List">
     <meta property="og:description" content="The obbyist list, which ranges from top #1 to #50 from each country.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/index.html">
-    <meta property="og:image" id="og-image" content="https://raw.githubusercontent.com/bypassing1/The-Obbyist-List/master/assets/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png">
+    <meta property="og:image" id="og-image" content="https://cdn.discordapp.com/attachments/1246327728588849162/1250719254479900754/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png?ex=666bf693&is=666aa513&hm=e14c099d0f92f030444d0f238ed03a938a124024e3867e6cf60d666e9a517af1&">
     <meta property="og:type" content="website">
 </head>
 
