--- a/eio-list.html
+++ b/eio-list.html
@@ -9,7 +9,7 @@
     <title>Elite Indonesian Obbyist List</title>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Elite Indonesian Obbyist List">
-    <meta property="og:description" content="The Indonesian list, which ranges from top #1 to #50 from indonesia.">
+    <meta property="og:description" content="The Indonesian list, which ranges from top #1 to #50 from all of indonesia.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/eio-list.html">
     <meta property="og:image" id="og-image" content="https://cdn.discordapp.com/attachments/1246327728588849162/1250720477161328671/bypassing1_github_io_the_obbyist_list_eio_list_htm_bab6f82336d0.png?ex=666bf7b7&is=666aa637&hm=a66e960cf330d51ae52a75d78fdb90e094eab0c5e7f94dcc25191eff2ed3f7a3&">
     <meta property="og:type" content="website">
