--- a/eio-list.html
+++ b/eio-list.html
@@ -29,7 +29,7 @@
                         <h3>Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="#">Universal List</a>
+                        <a href="universal-list.html">Universal List</a>
                         <a href="eio-list.html">Indonesian List</a>
                         <a href="voc-list.html">Vietnamese List</a>
                     </div>
