--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Home</title>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="The Obbyist List">
-    <meta property="og:description" content="The obbyist list, which ranges from top #1 to #50 from each country.">
+    <meta property="og:description" content="The universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list..">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/index.html">
     <meta property="og:image" id="og-image" content="https://cdn.discordapp.com/attachments/1246327728588849162/1250719254479900754/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png?ex=666bf693&is=666aa513&hm=e14c099d0f92f030444d0f238ed03a938a124024e3867e6cf60d666e9a517af1&">
     <meta property="og:type" content="website">
@@ -29,7 +29,7 @@
                         <h3>Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="#">Universal List</a>
+                        <a href="universal-list.html">Universal List</a>
                         <a href="eio-list.html">Indonesian List</a>
                         <a href="voc-list.html">Vietnamese List</a>
                     </div>
