--- a/universal-list.html
+++ b/universal-list.html
@@ -20,7 +20,7 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index.html"><span>Vietnamese</span> Obby Community List</a>
+                <a href="index.html"><span>Universal</span> List</a>
             </div>
             <div class="nav-group">
                 <div class="dropdown">
