--- a/universal-list.html
+++ b/universal-list.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Vietnamese Obbyist Community List</title>
     <meta name="author" content="bypassing1">
-    <meta property="og:title" content="Vietnamese Obbyist Community List">
-    <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from all of vietnam.">
+    <meta property="og:title" content="Universal List">
+    <meta property="og:description" content="The Universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list...">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/universal-list.html">
     <meta property="og:image" id="og-image" content="https://cdn.discordapp.com/attachments/1246327728588849162/1250719254479900754/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png?ex=666bf693&is=666aa513&hm=e14c099d0f92f030444d0f238ed03a938a124024e3867e6cf60d666e9a517af1&">
     <meta property="og:type" content="website">
