--- a/universal-list.html
+++ b/universal-list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Vietnamese Obbyist Community List</title>
+    <title>Universal List</title>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Universal List">
     <meta property="og:description" content="The Universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list...">
