--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <h3>Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="universal-list.html">Universal List</a>
-                        <a href="eio-list.html">Indonesian List</a>
-                        <a href="voc-list.html">Vietnamese List</a>
+                        <a href="universal-list.html" id="trigger">Universal List</a>
+                        <a href="eio-list.html" id="trigger">Indonesian List</a>
+                        <a href="voc-list.html" id="trigger">Vietnamese List</a>
                     </div>
                 </div>
                 <div class="nav">
@@ -43,6 +43,7 @@
             </div>
         </div>
     </header>
+    <div class="top-block"></div>
     <div class="information">
         <div class="information-middle">
             <h1>Obbyists List</h1>
