--- a/universal-list.html
+++ b/universal-list.html
@@ -7,6 +7,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Universal List</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
+    crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Universal List">
     <meta property="og:description" content="The Universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list...">
