--- a/voc-list.html
+++ b/voc-list.html
@@ -7,6 +7,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Vietnamese Obbyist Community List</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
+    crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Vietnamese Obbyist Community List">
     <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from all of vietnam.">
