--- a/universal-list.html
+++ b/universal-list.html
@@ -28,7 +28,7 @@
                 <div class="dropdown">
                     <button class="dropbtn" onclick="toggleDropdown()">
                         <img src="assets/country.svg" class="flag-icon">
-                        <h3>Universal List</h3>
+                        <h3 class="nav-title">Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
                         <a href="universal-list.html">Universal List</a>
@@ -39,7 +39,7 @@
                 <div class="nav">
                     <a href="https://discord.gg/XXCk8EDF6r" target="_blank">
                         <img src="assets/discord.svg" class="flag-icon">
-                        <h3>Discord Server</h3>
+                        <h3 class="nav-title">Discord Server</h3>
                     </a>
                 </div>
             </div>
