--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             </div>
         </div>
     </header>
+    <div class="loader"></div>
     <div class="top-block"></div>
-    <div class="information">
+    <div class="information">   
         <div class="information-middle">
             <h1>Obbyists List</h1>
         <h2>The hardest obbies listed in each country</h2>
@@ -62,6 +63,18 @@
         const dropdownContent = document.getElementById("dropdownContent");
         dropdownContent.classList.toggle("show");
     }
+
+    const loader = document.querySelector(".loader");
+    const appRoot = document.documentElement;
+
+    const startTransition = () => {
+    loader.style.transform = "translateX(100%)";
+};
+
+window.addEventListener("load", () => {
+    startTransition();
+},
+)
     </script>
     <footer>
         <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
