--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <h3>Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="universal-list.html" id="trigger">Universal List</a>
-                        <a href="eio-list.html" id="trigger">Indonesian List</a>
-                        <a href="voc-list.html" id="trigger">Vietnamese List</a>
+                        <a href="universal-list" id="trigger">Universal List</a>
+                        <a href="eio-list" id="trigger">Indonesian List</a>
+                        <a href="voc-list" id="trigger">Vietnamese List</a>
                     </div>
                 </div>
                 <div class="nav">
