--- a/voc-list.html
+++ b/voc-list.html
@@ -31,9 +31,9 @@
                         <h3 class="nav-title">Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="universal-list.html">Universal List</a>
-                        <a href="eio-list.html">Indonesian List</a>
-                        <a href="voc-list.html">Vietnamese List</a>
+                        <a href="universal-list">Universal List</a>
+                        <a href="eio-list">Indonesian List</a>
+                        <a href="voc-list">Vietnamese List</a>
                     </div>
                 </div>
                 <div class="nav">
