--- a/eio-list.html
+++ b/eio-list.html
@@ -22,7 +22,7 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index.html">Elite <span>Indonesian</span> Obbyist List</a>
+                <a href="index">Elite <span>Indonesian</span> Obbyist List</a>
             </div>
             <div class="nav-group">
                 <div class="dropdown">
@@ -78,7 +78,7 @@
     </script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-    const cards = document.querySelectorAll("#about .card, #features .card");
+    const cards = document.querySelectorAll(".card");
 
     const setCardOpacity = () => {
         cards.forEach(card => {
