--- a/voc-list.html
+++ b/voc-list.html
@@ -22,7 +22,7 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index.html"><span>Vietnamese</span> Obby Community List</a>
+                <a href="index"><span>Vietnamese</span> Obby Community List</a>
             </div>
             <div class="nav-group">
                 <div class="dropdown">
@@ -78,7 +78,7 @@
     </script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-    const cards = document.querySelectorAll("#about .card, #features .card");
+    const cards = document.querySelectorAll(".card");
 
     const setCardOpacity = () => {
         cards.forEach(card => {
