Fixes : Removed page folder

--- a/eio-list.html
+++ b/eio-list.html
@@ -28,7 +28,7 @@
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
-                    <a href="page/index">
+                    <a href="index">
                         <img src="assets/home.svg" class="flag-icon">
                         <h3 class="nav-title">Home</h3>
                     </a>
@@ -39,9 +39,9 @@
                         <h3 class="nav-title">Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="page/universal-list">Universal List</a>
-                        <a href="page/eio-list">Indonesian List</a>
-                        <a href="page/voc-list">Vietnamese List</a>
+                        <a href="universal-list">Universal List</a>
+                        <a href="eio-list">Indonesian List</a>
+                        <a href="voc-list">Vietnamese List</a>
                     </div>
                 </div>
                 <div class="nav">
