--- a/universal-list.html
+++ b/universal-list.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Vietnamese Obbyist Community List</title>
+    <title>Universal List</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
-    <meta property="og:title" content="Vietnamese Obbyist Community List">
-    <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from all of vietnam.">
-    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
+    <meta property="og:title" content="Universal List">
+    <meta property="og:description"
+        content="The Universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list...">
+    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/universal-list.html">
     <meta property="og:image" id="og-image"
-        content="https://cdn.discordapp.com/attachments/1246327728588849162/1251096242075860992/image.png?ex=666d55ac&is=666c042c&hm=1673e30fb92b931a8db05c2793e8c374acdfc3acea0928abc6aff203b0d87349&">
+        content="https://cdn.discordapp.com/attachments/1246327728588849162/1251095749547261992/image.png?ex=666d5536&is=666c03b6&hm=d70e900affc0eb9801a2bf52de05da0a9f7fa760c71cce17e3566bb63be724c1&">
     <meta property="og:type" content="website">
 </head>
 
@@ -23,11 +24,11 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index"><span>Vietnamese</span> Obby Community List</a>
+                <a href="index"><span>Universal</span> List</a>
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
-                    <a href="page/index">
+                    <a href="index">
                         <img src="assets/home.svg" class="flag-icon">
                         <h3 class="nav-title">Home</h3>
                     </a>
@@ -38,9 +39,9 @@
                         <h3 class="nav-title">Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="page/universal-list">Universal List</a>
-                        <a href="page/eio-list">Indonesian List</a>
-                        <a href="page/voc-list">Vietnamese List</a>
+                        <a href="universal-list">Universal List</a>
+                        <a href="eio-list">Indonesian List</a>
+                        <a href="voc-list">Vietnamese List</a>
                     </div>
                 </div>
                 <div class="nav">
@@ -55,12 +56,12 @@
     <div class="top-block"></div>
     <nav class="lists">
         <div>
-            <a href="#main-list">
+            <a class="active" href="" href="" onClick=" onRouteClick('a'); return false; ">
                 <h1>Main List</h1>
             </a>
         </div>
         <div>
-            <a href="#legacy-list">
+            <a href="" onClick=" onRouteClick('b'); return false; ">
                 <h1>Legacy List</h1>
             </a>
         </div>
@@ -79,7 +80,7 @@
         <div class="feature-cards" id="legacy-container">
         </div>
     </div>
-    <script src="script.js" id="voc-list"></script>
+    <script src="script.js" id="universal-list"></script>
     <script class="traffic">
         const _0x73fdb9 = _0x3654;
         (function (_0x28f09f, _0x335835) {
