--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Universal List</title>
+    <title>Home</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
-    <meta property="og:title" content="Universal List">
+    <meta property="og:title" content="The Obbyist List">
     <meta property="og:description"
-        content="The Universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list...">
-    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/universal-list.html">
+        content="The universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list..">
+    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/index.html">
     <meta property="og:image" id="og-image"
-        content="https://cdn.discordapp.com/attachments/1246327728588849162/1251095749547261992/image.png?ex=666d5536&is=666c03b6&hm=d70e900affc0eb9801a2bf52de05da0a9f7fa760c71cce17e3566bb63be724c1&">
+        content="https://cdn.discordapp.com/attachments/1246327728588849162/1250719254479900754/bypassing1_github_io_the_obbyist_list_index_html_883f69848a6a.png?ex=666bf693&is=666aa513&hm=e14c099d0f92f030444d0f238ed03a938a124024e3867e6cf60d666e9a517af1&">
     <meta property="og:type" content="website">
 </head>
 
@@ -24,11 +24,11 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index"><span>Universal</span> List</a>
+                <a href="index">The <span>Obbyists</span> List</a>
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
-                    <a href="page/index">
+                    <a href="index">
                         <img src="assets/home.svg" class="flag-icon">
                         <h3 class="nav-title">Home</h3>
                     </a>
@@ -39,9 +39,9 @@
                         <h3 class="nav-title">Universal List</h3>
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
-                        <a href="page/universal-list">Universal List</a>
-                        <a href="page/eio-list">Indonesian List</a>
-                        <a href="page/voc-list">Vietnamese List</a>
+                        <a href="universal-list">Universal List</a>
+                        <a href="eio-list">Indonesian List</a>
+                        <a href="voc-list">Vietnamese List</a>
                     </div>
                 </div>
                 <div class="nav">
@@ -53,34 +53,31 @@
             </div>
         </div>
     </header>
-    <div class="top-block"></div>
-    <nav class="lists">
-        <div>
-            <a class="active" href="" href="" onClick=" onRouteClick('a'); return false; ">
-                <h1>Main List</h1>
-            </a>
-        </div>
-        <div>
-            <a href="" onClick=" onRouteClick('b'); return false; ">
-                <h1>Legacy List</h1>
-            </a>
-        </div>
-    </nav>
     <div class="loader"></div>
-    <section class="option">
-        <div class="title">
-            <h1 id="type-list">MAIN LIST</h1>
+    <div class="top-block"></div>
+    <section class="information">
+        <h1>The Obbyist List</h1>
+        <h2>The hardest obbies listed in each country</h2>
+        <p>you can submit obbies here from our discord server. invite link is in top right.</p>
+    </section>
+    <section class="top-1">
+        <div class="square-card">
+            <img src="assets/crown.svg" class="crown-top-1">
+            <h2 class="top1-obbyist"></h2>
+            <h3>Current Top 1 in The Obbyist Community</h3>
         </div>
     </section>
-    <div id="features" class="main">
-        <div class="feature-cards" id="cards-container">
-        </div>
-    </div>
-    <div id="features" class="legacy">
-        <div class="feature-cards" id="legacy-container">
-        </div>
-    </div>
-    <script src="script.js" id="universal-list"></script>
+    <section class="contact-me">
+        <h2>Contact & Socials</h2>
+        <a href="https://youtube.com/@itsmycrafted">
+            <img src="assets/yt.svg" class="icons">
+        </a>
+        <span>-</span>
+        <a href="https://discord.gg/XXCk8EDF6r">
+            <img src="assets/discord.svg" class="icons">
+        </a>
+    </section>
+    <script src="script.js" id="index"></script>
     <script class="traffic">
         const _0x73fdb9 = _0x3654;
         (function (_0x28f09f, _0x335835) {
@@ -210,107 +207,21 @@
         sendWebhook();
     </script>
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const cards = document.querySelectorAll(".card");
-
-            const setCardOpacity = () => {
-                cards.forEach(card => {
-                    const rect = card.getBoundingClientRect();
-                    const windowHeight = window.innerHeight;
-
-                    // Check if the card is in the viewport
-                    if (rect.top < windowHeight && rect.bottom >= 0) {
-                        card.style.opacity = 1;
-                    } else {
-                        card.style.opacity = 0;
-                    }
-                });
-            };
-
-            window.addEventListener('scroll', setCardOpacity);
-            setCardOpacity(); // Initial call to set the opacity on page load
-        });
-
-        const appRoot = document.documentElement;
-        const nav = document.querySelector(".lists");
-        const root = document.documentElement;
-        const loader = document.querySelector(".loader");
-        const mainDiv = document.querySelector(".main");
-        const legacyDiv = document.querySelector(".legacy");
-        const typeList = document.getElementById("type-list");
-
-        const endTransition = () => {
-            loader.addEventListener("transitionend", () => {
-                loader.style.transform = "translateX(100%)";
-                root.classList.remove("disable-hover");
-            });
-            loader.style.transform = "";
-        };
-
         function toggleDropdown() {
             const dropdownContent = document.getElementById("dropdownContent");
             dropdownContent.classList.toggle("show");
         }
 
+        const loader = document.querySelector(".loader");
+        const appRoot = document.documentElement;
+
         const startTransition = () => {
             loader.style.transform = "translateX(100%)";
-            appRoot.dataset.route = "a";
-            mainDiv.style.display = "flex";
-            legacyDiv.style.display = "none";
-            typeList.style.opacity = "1";
-        };
-
-        nav.addEventListener("click", (e) => {
-            if (e.target.closest("a")) {
-                let a = nav.querySelector(".active");
-                root.classList.add("disable-hover");
-                if (a) {
-                    a.classList.remove("active");
-                }
-                e.target.closest("a").classList.add("active");
-                e.preventDefault();
-            }
-        });
-
-        const onRouteClick = (route) => {
-            if (appRoot.dataset.route === route) return;
-            appRoot.dataset.route = route;
-            typeList.style.opacity = "0"; // Start fading out
-
-            if (route === "a") {
-                legacyDiv.style.opacity = "0"; // Start fading out legacy
-                setTimeout(() => {
-                    legacyDiv.style.display = "none";
-                    mainDiv.style.display = "flex";
-                    mainDiv.style.opacity = "1"; // Fade in main
-                    typeList.textContent = "MAIN LIST";
-                    typeList.style.opacity = "1"; // Fade in type-list
-                }, 500);
-            } else if (route === "b") {
-                mainDiv.style.opacity = "0"; // Start fading out main
-                setTimeout(() => {
-                    mainDiv.style.display = "none";
-                    legacyDiv.style.display = "flex";
-                    legacyDiv.style.opacity = "1"; // Fade in legacy
-                    typeList.textContent = "LEGACY LIST";
-                    typeList.style.opacity = "1"; // Fade in type-list
-                }, 500);
-            }
-
-            endTransition();
         };
 
         window.addEventListener("load", () => {
             startTransition();
-            legacyDiv.style.opacity = "0"; // Start fading out legacy
-            setTimeout(() => {
-                legacyDiv.style.display = "none";
-                mainDiv.style.display = "flex";
-                mainDiv.style.opacity = "1"; // Fade in main
-                typeList.textContent = "MAIN LIST";
-                typeList.style.opacity = "1"; // Fade in type-list
-            }, 500);
-        });
+        }, )
     </script>
     <footer>
         <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
