Update : Added ukraine to the list

--- a/voc-list.html
+++ b/voc-list.html
@@ -41,6 +41,7 @@
                         <a href="universal-list">Universal List</a>
                         <a href="eio-list">Indonesian List</a>
                         <a href="voc-list">Vietnamese List</a>
+                        <a href="ukr-list">Ukraine List</a>
                     </div>
                 </div>
                 <div class="nav">
