--- a/statistics.html
+++ b/statistics.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Vietnamese Obbyist Community List</title>
+    <title>Player Statistics Viewer</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
-    <meta property="og:title" content="Vietnamese Obbyist Community List">
-    <meta property="og:description" content="The Vietnamese list, which ranges from top #1 to #50 from all of vietnam.">
+    <meta property="og:title" content="Player Statistics Viewer">
+    <meta property="og:description" content="Player Statistics Viewer, each obby you beat in universal list you gain points.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
     <meta property="og:image" id="og-image"
         content="https://cdn.discordapp.com/attachments/1246327728588849162/1251096242075860992/image.png?ex=666d55ac&is=666c042c&hm=1673e30fb92b931a8db05c2793e8c374acdfc3acea0928abc6aff203b0d87349&">
