List Update : - Added korean obby community List

--- a/public/1GQtrnjZSfRfWg9koI3MMhMq0T1gpw8l0mh7oILwl2hkjENLrG.html
+++ b/public/1GQtrnjZSfRfWg9koI3MMhMq0T1gpw8l0mh7oILwl2hkjENLrG.html
@@ -42,6 +42,7 @@
                         <a href="eio-list">Indonesian List</a>
                         <a href="voc-list">Vietnamese List</a>
                         <a href="ukr-list">Ukraine List</a>
+                        <a href="koc-list">Korean List</a>
                     </div>
                 </div>
                 <div class="nav">
