--- a/public/voc-list.html
+++ b/public/voc-list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Player Statistics Viewer</title>
+    <title>Vietnamese Obbyist Community List</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
@@ -23,7 +23,7 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index"><span>Vietnamese</span> Obby Community List</a>
+                <a href="index"><span>Korean</span> Obby Community List</a>
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
@@ -42,6 +42,7 @@
                         <a href="eio-list">Indonesian List</a>
                         <a href="voc-list">Vietnamese List</a>
                         <a href="ukr-list">Ukraine List</a>
+                        <a href="koc-list">Korean List</a>
                     </div>
                 </div>
                 <div class="nav">
