--- a/public/statistics.html
+++ b/public/statistics.html
@@ -42,6 +42,7 @@
                         <a href="eio-list">Indonesian List</a>
                         <a href="voc-list">Vietnamese List</a>
                         <a href="ukr-list">Ukraine List</a>
+                        <a href="koc-list">Korean List</a>
                     </div>
                 </div>
                 <div class="nav">
