--- a/public/koc-list.html
+++ b/public/koc-list.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Korean Obbyist Community List</title>
+    <title>Korean Obby Community List</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Korean Obbyist Community List">
-    <meta property="og:description" content="Korean Obbyist Community List, which ranges from top #1 to #50 from all of south korea.">
+    <meta property="og:description" content="Korean Obby Community List, which ranges from top #1 to #50 from all of south korea.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list">
     <meta property="og:image" id="og-image"
         content="https://cdn.discordapp.com/attachments/1246327728588849162/1251096242075860992/image.png?ex=666d55ac&is=666c042c&hm=1673e30fb92b931a8db05c2793e8c374acdfc3acea0928abc6aff203b0d87349&">
