Fix CSS, Add more data

--- a/public/koc-list.html
+++ b/public/koc-list.html
@@ -46,9 +46,9 @@
                     </div>
                 </div>
                 <div class="nav">
-                    <a href="https://discord.gg/XXCk8EDF6r" target="_blank">
-                        <img src="assets/discord.svg" class="flag-icon" />
-                        <h3 class="nav-title">Discord Server</h3>
+                    <a href="statistics" target="_blank">
+                        <img src="assets/stats.svg" class="flag-icon" />
+                        <h3 class="nav-title">Player Stats</h3>
                     </a>
                 </div>
             </div>
