--- a/public/voc-list-editor.html
+++ b/public/voc-list-editor.html
@@ -91,6 +91,7 @@
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json',
+                        'Authorization': 'Bearer vercel_blob_rw_PI3eTbNtsTmdvlu5_lCufpkmXsInUuY8wvJMDEqd9LOWDAC',
                     },
                     body: updatedData,
                 })
